# cohere-discord-character

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.example.yml  good_kid_songs.py  pyproject.toml  requirements.txt
old_src/: ghost_king.py
src/: __init__.py  bot.py
src/cogs/commands/: cohere.py  dev.py  general.py
src/cogs/listeners/: autoresponder.py
src/utils/: cohere.py  database.py
